Build and coverage status badges

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+[![Build Status](https://travis-ci.org/casual-passer/Incidents-system.png?branch=master)](https://travis-ci.org/casual-passer/Incidents-system)
+[![Coverage Status](https://coveralls.io/repos/casual-passer/Incidents-system/badge.png?branch=master)](https://coveralls.io/r/casual-passer/Incidents-system?branch=master)
+
+
 INSTALLATION
 
 # login as root
